clusters/k3s/apps/vaultwarden/helm-vaultwarden.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vaultwarden
