clusters/k3s/apps/vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: vaultwarden
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    external-dns.alpha.kubernetes.io/hostname: vaultwarden.grandlan.dev
spec:
  ingressClassName: traefik
  tls:
    - secretName: vaultwarden-tls
      hosts:
        - vaultwarden.home.lan
    - secretName: vaultwarden-grandlan-dev-tls
      hosts:
        - vaultwarden.grandlan.dev
  rules:
    - host: vaultwarden.home.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
    - host: vaultwarden.grandlan.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
